Update popover window for download links history. Make "Download History" button always visible but disabled when there is no history. Also make the browser size modal window display in front of all other windows (higher z-index). - In footer.html (line 7), add is-disabled class to Download History button   to grey out the button. - In footer.html (line 6), rename to "Planetary Ring-Moon Systems Node" to   "PDS Ring-Moon Systems Node". - In opus.css (line 976-981), create .is-disabled with the styling for   disabled a tag. - In opus.css (line 1027-1036), add z-index styling to make sure browser   size window is displayed on top of all other windows, and popover window   is covered by the modal backdrop. - In cart.js (line 30-35, 176), create downloadLinksPopoverTitle to store   title for popover window. - In cart.js (line 350, 392), proper enable/disable download history button. - In cart.js (line 13), change downloadLinksMaxHeight to 200, this will   make the popover window shorter.

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -969,9 +969,15 @@ panel */
 
 /* Styling for download history button at the lower right of footer */
 .op-download-links-btn {
-    display: none;
     float: right;
     cursor: pointer;
+}
+
+/* Styling for disabled a tag button */
+.is-disabled {
+    color: grey;
+    opacity: 0.5;
+    pointer-events: none;
 }
 
 .op-download-links-btn:hover {
@@ -1016,6 +1022,17 @@ footer for popover window */
 /* Requirement for ps in popover window */
 .popover-body {
     position: relative;
+}
+
+/* Make boostrap .modal-backdrop cover the popover window */
+.popover {
+    z-index: 1039;
+}
+
+/* Make sure browser size modal window has higher z-index than other
+windows, this will make sure it's not covered by any other windows. */
+#op-browser-size-msg {
+    z-index: 9999;
 }
 
 div.gallery {
